# simple-invoicing

./: .gitignore  Makefile  README.md  pyproject.toml
src/simple_invoicing/: config.py  utils.py
src/simple_invoicing/UI/: tk.py
src/simple_invoicing/UI/controllers/: family_controller.py
src/simple_invoicing/UI/models/: events.py  family_model.py  observable.py
src/simple_invoicing/UI/views/: common.py  family_view.py
src/simple_invoicing/adapters/: db_tables.py  ports.py  repositories.py
src/simple_invoicing/domain/: Makefile  TreeStruct.py  conftest.py  exceptions.py  model.py  test_categories.py  test_category_and_products.py  test_client.py  test_price.py  test_tree.py
src/simple_invoicing/persistence/: db.py  exceptions.py  repositories.py  snapshot.py
src/simple_invoicing/services/: services.py  units_of_work.py
tests/: conftest.py
tests/integration/: test_repositories.py  test_table_creation.py  test_units_of_work.py
tests/unit/: test_category_and_products.py  test_price.py  test_services.py  test_snapshots.py  test_tree.py  test_ui.py
