[project]
name = "simple-invoicing"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Guzman Gonzalez", email = ""},
]
dependencies = [
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-sugar>=0.9.7",
    "pytest-cov>=4.1.0",
]
dev = [
    "ruff>=0.1.10",
]

[tool.pdm.scripts]
UI = {call = "src.simple_invoicing.UI.tk:main"}
count-tests = {shell = "grep -c test_ tests/**/test_*.py"}
unit-tests = "pytest tests/unit/ --cov=src/simple_invoicing/domain/"
api-tests = {shell = "pytest tests/**/test_*services.py"}
integration-tests = "pytest tests/integration/ --cov=src/simple_invoicing/persistence/ --cov=src/simple_invoicing/services/"
e2e-tests = "pytest tests/e2e/"
tests = {composite = ["unit-tests", "integration-tests", "e2e-tests"]}
format = "ruff format ."
all = {composite = ["tests", "format"]}
